# md-xilinx

./: .gitignore  .gitmodules  CMakeLists.txt  example.txt  main.cpp
fpga/: CMakeLists.txt  Makefile  config.h  ext_metadata.json  xsa.xml
fpga/host/: main.cpp  utils.cpp  utils.hpp
fpga/kernels/move/: move.cpp  move.hpp  move_test.cpp  run_hls.tcl
fpga/kernels/scale/: run_hls.tcl  scale.cpp  scale.hpp  scale_test.cpp
host/: .main.cpp.swp  CMakeLists.txt  args.hpp  config.hpp  input.cpp  input.hpp  main.cpp  md.cpp  md.hpp  random.hpp
